Got something working enchants wise